--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>React</title>
 </head>
 <body>
+
+    <div id="app"></div>
     <script src="js/bundle.js" charset="utf-8"></script>
 </body>
 </html>
